2017-08-11 Massimo Manghi <mxmanghi@apache.org>
	* src/mod_rivet_ng/mod_rivet.c: add check on 
	environment variable AP_PARENT_PID to prevent
	server Tcl init script from running in winnt
	controlled child processes (as per Apache HTTP 
	server documentation)
	
2017-08-10 Georgios Petasis <petasis@apache.org>
    * src\mod_rivet_ng\apache_config.c:
    * src\mod_rivet_ng\mod_rivet.c:
    * src\mod_rivet_ng\mod_rivet_common.c:
    * src\mod_rivet_ng\mod_rivet_generator.c:
    * src\mod_rivet_ng\rivet_lazy_mpm.c:
    * src\mod_rivet_ng\worker_prefork_common.c: Locally declared symbol
    rivet_module as extern (DLLIMPORT).

    * branches\cmake\src\mod_rivet_ng\mod_rivet.h: Symbol rivet_module
    removed from header file.

    * branches\cmake\src\mod_rivet_ng\mod_rivet_common.c: Used ckalloc() instead
    of apr_pcalloc() for variable globals, in Rivet_PerInterpInit().

    * cmake\README.cmake:
    * cmake\CMakeLists.txt: Added support for picking a Tcl installed at a
    non-standard location. Updated README.cmake with an example. Also disabled
    the switch to export all symbols from mod_rivet.so
    (WINDOWS_EXPORT_ALL_SYMBOLS).

    * src\mod_rivet_ng\mod_rivet_common.c:
    * src\mod_rivet_ng\rivetCore.c: Fixes in DLLEXPORT.

2017-08-07 Massimo Manghi <mxmanghi@apache.org>
	* src/mod_rivet_ng/mod_rivet.c: Rivet_ServerInit is now implementing
	the recommended mechanism to avoid the double load of external
	modules
	
2017-08-05 Georgios Petasis <petasis@apache.org>
    * cmake\CMakeLists.txt: rivetparser/rivetlib shared libraries now have the
    prefix "lib" under all platforms.

    * cmake\cmake_extra_modules\rivet_config.h.cmake: RIVET_RIVET_CORE or
    RIVET_CORE? Added also support for RIVET_CORE, but disabled, as it causes
    compilation errors (in C preprosessor, two strings are compared, which is
    not supported).

    * rivet\pkgIndex.tcl: Dropped ".so" in favour of "info sharedlibextension".

    * src\librivet\rivetCrypt.c: